// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/DropDownIcon renders correctly custom close 1`] = `
<View
  style={false}
>
  <Text
    allowFontScaling={true}
    style={
      Object {
        "color": "#5E6678",
        "fontFamily": "Neotis",
        "fontSize": 72,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`@npm/mobydick-core/DropDownIcon renders correctly custom open 1`] = `
<View
  style={
    Object {
      "transform": Array [
        Object {
          "rotateX": "180deg",
        },
      ],
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Object {
        "color": "#5E6678",
        "fontFamily": "Neotis",
        "fontSize": 72,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`@npm/mobydick-core/DropDownIcon renders correctly standart close 1`] = `
<Text
  allowFontScaling={true}
  style={
    Object {
      "color": "#9BA1B0",
      "fontFamily": "Neotis",
      "fontSize": 72,
    }
  }
>
  
</Text>
`;

exports[`@npm/mobydick-core/DropDownIcon renders correctly standart open 1`] = `
<Text
  allowFontScaling={true}
  style={
    Object {
      "color": "#9BA1B0",
      "fontFamily": "Neotis",
      "fontSize": 72,
      "transform": Array [
        Object {
          "rotateX": "180deg",
        },
      ],
    }
  }
>
  
</Text>
`;
